fix original typesetter's errors to reproduce cummings' manuscript (MS Am 1823.5 (359) Houghton Library, Harvard University)

--- a/_data/poems/xli-poems/songs-i.yaml
+++ b/_data/poems/xli-poems/songs-i.yaml
@@ -1,30 +1,25 @@
 title: Songs I
 
 first_line: |-1
- the
-     sky
-         was
+ the sky
 
 text: |-1
- the
-     sky
-         was
- can  dy  lu
- minous
-        edible
- spry
-      pinks shy
- lemons
- greens   coo  l choc
- olate
- s.
- 
-    un   der,
-    a  lo
- co
- mo
-    tive     s   pout
-                     ing
-                        vi
-                        o
-                        lets
+         the sky
+         was    can dy  
+      lu            mi
+         nous         ed
+                     i
+         ble
+            spry  pinks
+            shy        lem
+         ons
+                          greens
+     cool
+  choco            lates
+         un                     der
+ a   lo
+     co
+    mo            tive            s pout
+                    ing
+            vi
+      o            lets
