--- a/_data/poems/is-5/one-xii.yaml
+++ b/_data/poems/is-5/one-xii.yaml
@@ -1,3 +1,15 @@
 title: ONE XII
 
 first_line: (and i imagine
+
+text: |-1
+ (and i imagine
+ never mind Joe agreeably cheerfully remarked when
+ surrounded by fat stupid animals
+ the jewess shrieked
+ the messiah tumbled successfully into the world
+ the animals continued eating.   And i imagine she,and
+ heard them slobber and
+ in the darkness)
+
+ stood sharp angels with faces like Jim Europe
