keypunches is 5 one xiv

--- a/_data/poems/is-5/one-xiv.yaml
+++ b/_data/poems/is-5/one-xiv.yaml
@@ -1,3 +1,24 @@
 title: ONE XIV
 
 first_line: ITEM
+
+text: |-1
+ ITEM
+ this man is o so
+ Waiter
+ this;woman is
+
+ please shut that
+ the pout And affectionate leer
+ interminable pyramidal,napkins
+ (this man is oh so tired of this
+ a door opens by itself
+ woman.)they so to speak were in
+
+ Love once?
+ now
+     her mouth opens too far
+ and:she attacks her Lobster without
+ feet mingle under the
+ mercy.
+       (exit the hors d’oeuvres)
