--- a/_data/poems/is-5/four-xvi.yaml
+++ b/_data/poems/is-5/four-xvi.yaml
@@ -1,3 +1,26 @@
 title: FOUR XVI
 
 first_line: if within tonight’s erect
+everywhere of black muscles fools
+a weightless slowness(deftly
+
+muting the world's texture with drifted
+
+gifts of featheriest slenderness and
+how gradually which descending are suddenly
+received)or by doomfull connivance
+
+accurately thither and hither myself
+
+struts unremembered(rememberingly 
+with in both pockets curled hands moves)
+why then toward morning he is a ghost whom
+
+assault these whispering fists of hail
+
+(and a few windows awaken certain faces
+busily horribly blunder through new light
+hush we are made of the same thing as perhaps
+
+nothing, he murmurs carefully lying down)
+
