you are a house

--- a/_data/poems/is-5/four-ix.yaml
+++ b/_data/poems/is-5/four-ix.yaml
@@ -5,7 +5,7 @@ first_line: supposing i dreamed this)
 text: |-1
  supposing i dreamed this)
  only imagine, when day has thrilled
- you ae a house around which
+ you are a house around which
  i am a wind—
  
  your walls will not reckon how
