--- a/_data/poems/is-5/five-iv.yaml
+++ b/_data/poems/is-5/five-iv.yaml
@@ -1,3 +1,24 @@
 title: FIVE IV
 
 first_line: our touching hearts slenderly comprehend
+
+text: |-1
+ our touching hearts slenderly comprehend
+ (clinging as finders, loving one another
+ gradually into hands) and bend
+ into the huge disaster of the year:
+
+ like this most early single star which tugs
+
+ weakly at twilight, caught in the thickening fear
+ our slightly fingering spirits starve and smother;
+ until autumn abruptly wholly hugs
+
+ our dying silent minds, which hand in hand
+ at some window try to undersatnd
+ the
+    (thorugh pale miles of perishing air, haunted
+ with huddling infinite wishless melancholy,
+ suddenly looming) accurate undaunted
+
+ moon's bright third tumblings slowly
