--- a/_data/poems/is-5/four-ix.yaml
+++ b/_data/poems/is-5/four-ix.yaml
@@ -23,7 +23,7 @@ text: |-1
  will never guess how much
  my wonderful jealousy is dark
  
- if light should flower;
+ if light should flower:
  or laughing sparkle from
  the shut house(around and around
  which a poor wind will roam
