--- a/_data/poems/is-5/one-xxx.yaml
+++ b/_data/poems/is-5/one-xxx.yaml
@@ -4,7 +4,7 @@ first_line: weazened Irrefutable unastonished
 
 text: |-1
  weazened Irrefutable unastonished
- two,countenance seated in arranging;sunlight
+ two,countenances seated in arranging;sunlight
  with-cred unspeak-ing:tWeNtY,f i n g e r s,large
  four gnarled lips totter
 
