--- a/_data/poems/is-5/four-xvi.yaml
+++ b/_data/poems/is-5/four-xvi.yaml
@@ -1,26 +1,28 @@
 title: FOUR XVI
 
 first_line: if within tonight’s erect
-everywhere of black muscles fools
-a weightless slowness(deftly
 
-muting the world's texture with drifted
+text: |-1
+ if within tonight’s erect
+ everywhere of black muscles fools
+ a weightless slowness(deftly
 
-gifts of featheriest slenderness and
-how gradually which descending are suddenly
-received)or by doomfull connivance
+ muting the world's texture with drifted
 
-accurately thither and hither myself
+ gifts of featheriest slenderness and
+ how gradually which descending are suddenly
+ received)or by doomfull connivance
 
-struts unremembered(rememberingly 
-with in both pockets curled hands moves)
-why then toward morning he is a ghost whom
+ accurately thither and hither myself
 
-assault these whispering fists of hail
+ struts unremembered(rememberingly 
+ with in both pockets curled hands moves)
+ why then toward morning he is a ghost whom
 
-(and a few windows awaken certain faces
-busily horribly blunder through new light
-hush we are made of the same thing as perhaps
+ assault these whispering fists of hail
 
-nothing, he murmurs carefully lying down)
+ (and a few windows awaken certain faces
+ busily horribly blunder through new light
+ hush we are made of the same thing as perhaps
 
+ nothing, he murmurs carefully lying down)
