--- a/_data/poems/is-5/four-xvi.yaml
+++ b/_data/poems/is-5/four-xvi.yaml
@@ -7,7 +7,7 @@ text: |-1
  everywhere of black muscles fools
  a weightless slowness(deftly
 
- muting the world's texture with drifted
+ muting the world’s texture with drifted
 
  gifts of featheriest slenderness and
  how gradually which descending are suddenly
