--- a/_data/poems/is-5/four-xviii.yaml
+++ b/_data/poems/is-5/four-xviii.yaml
@@ -11,7 +11,7 @@ text: |-1
  thinner than a hair)
  
  making me feel
- how myself has been coerse and dull
+ how myself has been coarse and dull
  compared with you, silently who are 
  and cling
  to my mind always
