--- a/_data/poems/is-5/four-xviii.yaml
+++ b/_data/poems/is-5/four-xviii.yaml
@@ -18,7 +18,7 @@ text: |-1
  
  But now she sharpens and becomes crisper
  until I smile with knowing 
- –and all about
+ —and all about
  herself
  the sprouting largest final air
  
