--- a/_data/poems/is-5/one-xviii.yaml
+++ b/_data/poems/is-5/one-xviii.yaml
@@ -1,31 +1,34 @@
 title: ONE XVIII
 
 first_line: why are these pipples taking their hets off?
-the king & queen
-alighting from their limousine
-inhabit the Hotel Meurice (whereas
-i live in a garret and eat aspirine)
 
-but who is this pale softish almost round
-young man to whom headwaiters bow so?
-hush -- the author of Women By Night whose latest Seeds
-Of Evil sold 69 carloads before
-publication the girl who goes wrong you
+text: |-1
+ why are these pipples taking their hets off?
+ the king & queen
+ alighting from their limousine
+ inhabit the Hotel Meurice (whereas
+ i live in a garret and eat aspirine)
 
-know (whereas when i lie down i cough too
-much). How did The  traffice get so jammed?
-bedad it is the famous doctor who inserts
-monkeyglands in millionaires a cute idea n'est-ce pas? 
-(whereas, upon the other hand, myself) but let us next demand
+ but who is this pale softish almost round
+ young man to whom headwaiters bow so?
+ hush — the author of Women By Night whose latest Seeds
+ Of Evil sold 69 carloads before
+ publication the girl who goes wrong you
 
-wherefore yon mob
-an accident? somebody got concus-
-sion of the brain? -- Not
-a bit of it, my dears merely the prime
-minister of Siam in native
+ know (whereas when i lie down i cough too
+ much). How did The  traffice get so jammed?
+ bedad it is the famous doctor who inserts
+ monkeyglands in millionaires a cute idea n'est-ce pas? 
+ (whereas, upon the other hand, myself) but let us next demand
 
-costume, who
-emerging from a pissoir
-enters abruptly Notre Dame (whereas
-de gustibus non disputandum est
-my lady is tired Of That sort of thing
+ wherefore yon mob
+ an accident? somebody got concus-
+ sion of the brain? -- Not
+ a bit of it, my dears merely the prime
+ minister of Siam in native
+
+ costume, who
+ emerging from a pissoir
+ enters abruptly Notre Dame (whereas
+ de gustibus non disputandum est
+ my lady is tired Of That sort of thing
