--- a/_data/poems/is-5/one-xviii.yaml
+++ b/_data/poems/is-5/one-xviii.yaml
@@ -6,7 +6,7 @@ text: |-1
  why are these pipples taking their hets off?
  the king & queen
  alighting from their limousine
- inhabit the Hotel Meurice (whereas
+ inhabit the Hôtel Meurice(whereas
  i live in a garret and eat aspirine)
 
  but who is this pale softish almost round
