--- a/_data/poems/is-5/one-xviii.yaml
+++ b/_data/poems/is-5/one-xviii.yaml
@@ -15,20 +15,20 @@ text: |-1
  Of Evil sold 69 carloads before
  publication the girl who goes wrong you
 
- know (whereas when i lie down i cough too
- much). How did The  traffice get so jammed?
+ know(whereas when i lie down i cough too
+ much).   How did The  traffice get so jammed?
  bedad it is the famous doctor who inserts
  monkeyglands in millionaires a cute idea n'est-ce pas? 
- (whereas, upon the other hand, myself) but let us next demand
+ (whereas,upon the other hand, myself) but let us next demand
 
  wherefore yon mob
  an accident? somebody got concus-
- sion of the brain? -- Not
+ sion of the brain?—Not
  a bit of it, my dears merely the prime
  minister of Siam in native
 
- costume, who
+ costume,who
  emerging from a pissoir
- enters abruptly Notre Dame (whereas
+ enters abruptly Notre Dame(whereas
  de gustibus non disputandum est
  my lady is tired Of That sort of thing
