--- a/_data/poems/is-5/one-xviii.yaml
+++ b/_data/poems/is-5/one-xviii.yaml
@@ -16,7 +16,7 @@ text: |-1
  publication the girl who goes wrong you
 
  know(whereas when i lie down i cough too
- much).   How did The  traffice get so jammed?
+ much).   How did The traffic get so jammed?
  bedad it is the famous doctor who inserts
  monkeyglands in millionaires a cute idea n'est-ce pas? 
  (whereas,upon the other hand, myself) but let us next demand
