--- a/_data/poems/is-5/one-xviii.yaml
+++ b/_data/poems/is-5/one-xviii.yaml
@@ -22,13 +22,13 @@ text: |-1
  (whereas,upon the other hand,myself) but let us next demand
 
  wherefore yon mob
- an accident? somebody got concus-
+ an accident?somebody got concus-
  sion of the brain?—Not
- a bit of it, my dears merely the prime
+ a bit of it,my dears merely the prime
  minister of Siam in native
 
  costume,who
  emerging from a pissoir
  enters abruptly Notre Dame(whereas
  de gustibus non disputandum est
- my lady is tired Of That sort of thing
+ my lady is tired of That sort of thing
