--- a/_data/poems/is-5/four-xiv.yaml
+++ b/_data/poems/is-5/four-xiv.yaml
@@ -2,10 +2,11 @@ title: FOUR XIV
 
 first_line: it is so long since my heart has been with yours
 
-
+nowrap: true
 
 text: |-1
  it is so long since my heart has been with yours
+ 
  shut by our mingling arms through
  a darkness where new lights begin and
  increase,
