--- a/_data/poems/is-5/five-iv.yaml
+++ b/_data/poems/is-5/five-iv.yaml
@@ -2,23 +2,25 @@ title: FIVE IV
 
 first_line: our touching hearts slenderly comprehend
 
+nowrap: true
+
 text: |-1
  our touching hearts slenderly comprehend
- (clinging as finders, loving one another
- gradually into hands) and bend
+ (clinging as finders,loving one another
+ gradually into hands)and bend
  into the huge disaster of the year:
 
  like this most early single star which tugs
 
- weakly at twilight, caught in the thickening fear
+ weakly at twilight,caught in the thickening fear
  our slightly fingering spirits starve and smother;
  until autumn abruptly wholly hugs
 
- our dying silent minds, which hand in hand
- at some window try to undersatnd
+ our dying silent minds,which hand in hand
+ at some window try to understand
  the
-    (thorugh pale miles of perishing air, haunted
+    (through pale miles of perishing air,haunted
  with huddling infinite wishless melancholy,
- suddenly looming) accurate undaunted
+ suddenly looming)accurate undaunted
 
- moon's bright third tumblings slowly
+ moon’s bright third tumblings slowly
