--- a/_data/poems/is-5/four-xiii.yaml
+++ b/_data/poems/is-5/four-xiii.yaml
@@ -2,22 +2,27 @@ title: FOUR XIII
 
 first_line: Nobody wears a yellow
 
-Nobody wears a yellow
-flower in his buttonhole
-he is altogether a queer fellow
-as young as he is old
+nowrap: true
 
-when autumn comes
-who twiddles his white thumbs
-and thrisks down the boulevards
+text: |-1
+ Nobody wears a yellow
+ flower in his buttonhole
+ he is altogether a queer fellow
+ as young as he is old
 
-without his coat and hat
+ when autumn comes
+ who twiddles his white thumbs
+ and frisks down the boulevards
 
---(and i wonder just why that
-should please him or i wonder what he does)
+ without his coat and hat
 
-and why (at the bottom of this trunk,
-under some dirty collars)only a
-moment
-(or
-was it perhaps a year)ago I found staring 
+ —(and i wonder just why that
+ should please him or i wonder what he does)
+
+ and why (at the bottom of this trunk,
+ under some dirty collars)only a
+ moment
+ (or
+ was it perhaps a year)ago I found staring
+ 
+ me in the face a dead yellow small rose
