--- a/_data/poems/is-5/four-viii.yaml
+++ b/_data/poems/is-5/four-viii.yaml
@@ -11,7 +11,7 @@ text: |-1
  
  myself is sculptor of
  your body’s idiom:
- the musician of your wrists,
+ the musician of your wrists;
  the poet who is afraid
  only to mistranslate
  
@@ -23,16 +23,16 @@ text: |-1
  painter of your voice—
  beyond these elements
  
- remarkably nothing is. . . .  therefore,lady
+ remarkably nothing is....therefore,lady
  am i content should any
  by me carven thing provoke
  your gesture possibly or
  
- any painting( for its own
+ any painting(for its own
  
  reason)in your lips
  slenderly should create one least smile
  (shyly
  if a poem should lift to
  me the distinct country of your
- eves, gifted with green twilight)
+ eves,gifted with green twilight)
