Added "she being Brand"
Fixes #239

--- a/_data/poems/is-5/one-xxii.yaml
+++ b/_data/poems/is-5/one-xxii.yaml
@@ -1,3 +1,38 @@
 title: ONE XXII
 
 first_line: she being Brand
+
+nowrap: true
+
+text: |-1
+ she being Brand
+ 
+ -new;and you
+ know consequently a
+ little stiff i was
+ careful of her and(having
+ 
+ thoroughly oiled the universal
+ joint tested my gas felt of
+ her radiator made sure her springs were O.
+ 
+ K.)i went right to it flooded-the-carburetor cranked her
+ 
+ up,slipped the
+ clutch(and then somehow got into reverse she
+ kicked what
+ the hell)next
+ minute i was back in neutral tried and
+ 
+ again slo-wly;bare,ly nudg.   ing(my
+ 
+ lev-er Right-
+ oh and her gears being in
+ A 1 shape passed
+ from low through
+ second-in-to-high like
+ greasedlightningjustasweturnedthecornerofDivinity
+ 
+ avenue i touched the accelerator and give
+ 
+ her the juice,good
