--- a/_data/poems/is-5/three-iv.yaml
+++ b/_data/poems/is-5/three-iv.yaml
@@ -6,6 +6,7 @@ nowrap: true
 
 text: |-1
  impossibly
+ 
  motivated by midnight
  the flyspecked abdominous female
  indubitably tellurian
@@ -23,6 +24,6 @@ text: |-1
 
  of these antiquities—relaxing
                               hurries
- elsehwere;to blow
+ elsewhere;to blow
 
  incredible wampum
