--- a/_data/poems/is-5/five-v.yaml
+++ b/_data/poems/is-5/five-v.yaml
@@ -3,17 +3,17 @@ title: FIVE IV
 first_line: if i have made,my lady,intricate
 
 text: |-1
- if i have made,mylady,intricate
+ if i have made,my lady,intricate
  imperfect various things chiefly which wrong
- your eyes (frailer than most deep dreams are frail)
- songs less firm than your body's whitest song
+ your eyes(frailer than most deep dreams are frail)
+ songs less firm than your body’s whitest song
  upon my mind—if i have failed to snare
  the glance too shy—if through my singing slips
- the very skillful strangeness of your smile
+ the very skilful strangeness of your smile
  the keen primeval silence of your hair
 
- —let the world say"his most wise music stole
- nothing from death"—
+ —let the world say “his most wise music stole
+ nothing from death”—
                       you only will create
  (who are so perfectly alive)my shame:
  lady through whose profound and fragile lips
