--- a/_data/poems/is-5/five-v.yaml
+++ b/_data/poems/is-5/five-v.yaml
@@ -2,6 +2,8 @@ title: FIVE IV
 
 first_line: if i have made,my lady,intricate
 
+nowrap: true
+
 text: |-1
  if i have made,my lady,intricate
  imperfect various things chiefly which wrong
