--- a/_data/poems/is-5/one-xvi.yaml
+++ b/_data/poems/is-5/one-xvi.yaml
@@ -6,18 +6,18 @@ nowrap: true
 
 text: |-1
  it started when Bill’s chip let on to
- the bulls he’d humped a bloke back in fifteen.
+ the bulls he’d bumped a bloke back in fifteen.
  Then she came toward him on herkneesacrossthe locked
  room.  he knocked her cold and beat it for Chicago.
  
- Eddit was waiting for him,and they cleaned up a few
+ Eddie was waiting for him,and they cleaned up a few
  times—before she got the info
  from a broad that knew Eddie in Topeka,went clean
  daffy,and which was very silly hocked
  
- the diamond he gave her.  Bill was put wise
+ the diamond he gave her.   Bill was put wise
  that she was coming with his kid inside her.
- He laughed.  She came.  he gave her a shove
+ He laughed.   She came.   he gave her a shove
  and asked Eddit did he care to ride her?
  ....she exactly lay,looking hunks of love
  
