--- a/_data/poems/is-5/one-xvii.yaml
+++ b/_data/poems/is-5/one-xvii.yaml
@@ -6,7 +6,7 @@ nowrap: true
 
 text: |-1
  IKEY(GOLDBERG)’S WORTH I’M
- TOLD & SEVERAL MILLION
- FIKLESTEIN(FRITZ)LIVES
+ TOLD $ SEVERAL MILLION
+ FINKLESTEIN(FRITZ)LIVES
  AT THE RITZ WEAR
  carl & wilson COLLARS
