--- a/_data/poems/is-5/one-xxvi.yaml
+++ b/_data/poems/is-5/one-xxvi.yaml
@@ -14,7 +14,7 @@ text: |-1
  like Out of doors he’s a with
  eyes and making twice the a week
  you kind of,know(kind well of
- A sort of the way he smile but
+ A sort of the way he smile)but
  and her a I mean me a
  Irish,cook but well oh don’t
  you makes burst want to dear somehow
