--- a/_data/poems/is-5/one-xxii.yaml
+++ b/_data/poems/is-5/one-xxii.yaml
@@ -31,8 +31,26 @@ text: |-1
  A 1 shape passed
  from low through
  second-in-to-high like
- greasedlightningjustasweturnedthecornerofDivinity
+ greasedlightning) just as we turned the corner of Divinity
  
  avenue i touched the accelerator and give
  
  her the juice,good
+
+                   (it
+ 
+ was the first ride and believe i we was
+ happy to see how nice she acted right up to
+ the last minute coming back down by the Public
+ Gardens i slammed on
+ the internalexpanding
+ &
+ externalcontracting
+ brakes Bothatonce and
+ 
+ brought allofher tremB
+ -ling
+ to a:dead
+ 
+ stand-
+ ;Still)
