Transcription of "voices to voices,lip to lip" Fixes #246

--- a/_data/poems/is-5/one-xxxix.yaml
+++ b/_data/poems/is-5/one-xxxix.yaml
@@ -1,3 +1,34 @@
 title: ONE XXXIX
 
 first_line: voices to voices,lip to lip
+
+text: |-1
+ voices to voices,lip to lip
+ i swear(to noone everyone) constitutes
+ undying; or whatever this and that petal confutes...
+ to exist begin a peculiar form of sleep
+
+ what's beyond logic happens beneath will;
+ nor can these moments be translated:i say
+ that even after April
+ by God there is no excuse for May
+
+ —bring forth your flowers and machinery:sculpture and prose
+ flowers guess and miss
+ machinery is the more accurate,yes
+ it delivers the goods,Heaven knows
+
+ (yet are. we mindful,though not as yet awake,
+ of ourselves which shout and cling,bing
+ for a little while and which easily break
+ in spite of the best overseeing)
+
+ i mean that the blond absence of any program
+ except last and always and first to live
+ makes unimportant what i and you believe;
+ not for philosophy does this rose give a damn...
+
+ bring on your fireworks, which are a mixed
+ splendor of piston and of pistil;very well
+ provided an instant may be fixed
+ so that it will not rub,like any other pastel.
