--- a/_data/poems/is-5/one-xxxix.yaml
+++ b/_data/poems/is-5/one-xxxix.yaml
@@ -4,11 +4,11 @@ first_line: voices to voices,lip to lip
 
 text: |-1
  voices to voices,lip to lip
- i swear(to noone everyone) constitutes
- undying; or whatever this and that petal confutes...
+ i swear(to noone everyone)constitutes
+ undying;or whatever this and that petal confutes...
  to exist begin a peculiar form of sleep
 
- what's beyond logic happens beneath will;
+ what’s beyond logic happens beneath will;
  nor can these moments be translated:i say
  that even after April
  by God there is no excuse for May
@@ -18,8 +18,8 @@ text: |-1
  machinery is the more accurate,yes
  it delivers the goods,Heaven knows
 
- (yet are. we mindful,though not as yet awake,
- of ourselves which shout and cling,bing
+ (yet are we mindful,though not as yet awake,
+ of ourselves which shout and cling,being
  for a little while and which easily break
  in spite of the best overseeing)
 
@@ -28,7 +28,17 @@ text: |-1
  makes unimportant what i and you believe;
  not for philosophy does this rose give a damn...
 
- bring on your fireworks, which are a mixed
+ bring on your fireworks, hich are a mixed
  splendor of piston and of pistil;very well
  provided an instant may be fixed
  so that it will not rub,like any other pastel.
+
+ (While you and i have lips and voices which
+ are for kissing and to sing with
+ who cares if some oneeyed son of a bitch
+ invents an instrument to measure Spring with?
+ 
+ each dream nascitur,is not made...)
+ why then to Hell with that:the other;this,
+ since the thing perhaps is
+ to eat flowers and not to be afraid.
