--- a/_data/poems/is-5/one-xxxix.yaml
+++ b/_data/poems/is-5/one-xxxix.yaml
@@ -28,7 +28,7 @@ text: |-1
  makes unimportant what i and you believe;
  not for philosophy does this rose give a damn...
 
- bring on your fireworks, hich are a mixed
+ bring on your fireworks,which are a mixed
  splendor of piston and of pistil;very well
  provided an instant may be fixed
  so that it will not rub,like any other pastel.
