--- a/_data/poems/is-5/four-x.yaml
+++ b/_data/poems/is-5/four-x.yaml
@@ -2,9 +2,11 @@ title: FOUR X
 
 first_line: you are like the snow only
 
+nowrap: true
+
 text: |-1
  you are like the snow only
- purer fleeter, like the rain
+ purer fleeter,like the rain
  only sweeter frailer you
 
  whom certain
@@ -31,7 +33,7 @@ text: |-1
  the sharp days slobber in vain:
 
  Nor am i afraid that
- this, which we call autumn, cleverly
+ this,which we call autumn,cleverly
  dies and over the ripe world wanders with
  a near and careful
  smile in his mouth(making
@@ -41,4 +43,4 @@ text: |-1
  sleep under and thoroughly
  into all beautiful things)
 
- winter, whom Spring shall kill
+ winter,whom Spring shall kill
