--- a/_data/poems/is-5/four-xii.yaml
+++ b/_data/poems/is-5/four-xii.yaml
@@ -20,7 +20,7 @@ text: |-1
  
  solemnly
  myselves
- ask “life,the questio how do i drink dream smile
+ ask “life,the question how do i drink dream smile
  
  and how do i prefer this face to another and
  why do i weep eat sleep—what does the whole intend”
