--- a/_data/poems/is-5/three-viii.yaml
+++ b/_data/poems/is-5/three-viii.yaml
@@ -2,13 +2,13 @@ title: THREE VIII
 
 first_line: will out of the kindness of their hearts a few philosophers tell me
 
-nowrap: true
+nowrap: false
 
 text: |-1
  will out of the kindness of their hearts a few philosophers tell me
  what am i doing on top of this hill at Calchidas,in the sunlight?
- down ever so far on the beach below me a little girl in white spins,tubmles:rolling in sand.
- across this water,crowding tints:browns and whites, shoving, thedoting millions of windows of thousands of houses —Lisboa.   Like the crackle of typewriter,in the afternoon sky.
+ down ever so far on the beach below me a little girl in white spins,tumbles:rolling in sand.
+ across this water,crowding tints:browns and whites shoving, the doting millions of windows of thousands of houses—Lisboa.   Like the crackle of typewriter,in the afternoon sky.
  goats and sheep are driven by somebody along a curve of road which eats into a pink cliff back and up leaning out of yellowgreen water.
 
  they are building a house down there by the sea,in the afternoon.
@@ -22,7 +22,7 @@ text: |-1
 
  Naked and luminous
 
-                  (here the absurd I:life,to peer and wear clothes. i am altogether foolish,i suddenly make a fist out of ten fingers
+                    (here the absurd I;life,to peer and wear clothes. i am altogether foolish,i suddenly make a fist out of ten fingers
  voices rise from down ever so far—
  hush.
          Sunlight,
