--- a/_data/poems/is-5/three-iii.yaml
+++ b/_data/poems/is-5/three-iii.yaml
@@ -32,5 +32,5 @@ text: |-1
 
  our lady what do you think of this?   Do your proud fingers and
  your arms tremble remembering something squirming fragile
- and which had been presented unto you by a myster?
+ and which had been presented unto you by a mystery?
  ...the cathedral recedes into weather without answering
