--- a/_data/poems/is-5/two-xi.yaml
+++ b/_data/poems/is-5/two-xi.yaml
@@ -15,7 +15,7 @@ text: |-1
  for,
  my sister
 
- isabel creatd hundreds
+ isabel created hundreds
  (and
  hundreds)of socks not to
  mentions shirts fleaproof earwarmers
