Some small fixes

--- a/_data/poems/is-5/two-x.yaml
+++ b/_data/poems/is-5/two-x.yaml
@@ -42,7 +42,7 @@ text: |-1
  creature,swaggers daintily
  twiddling
  his tiny cane
- an,mazurkas about tweak-
+ and,mazurkas about tweak-
  ing his wing collar pecking at his im
 
  -peccable cravat directing being
