--- a/_data/poems/is-5/one-xxxviii.yaml
+++ b/_data/poems/is-5/one-xxxviii.yaml
@@ -29,10 +29,10 @@ text: |-1
 
  Meanwhile the tea regressed.
 
- Kipling again H. G. Wells,and Anatole France shook hands again and yet again shook again hands again,the former coachman with a pipewrench of the again latter then opening a box of newly without exaggeration shot with some difficulty sardines. Mr. Wiggin took Wrs. Miggin’s harm in is,extinguishing the spittoon by a candle furnished by courtesy of the management on Thursdays,opposite which a church stood perfectly upright but not piano item:a watermelon causes indigestion to William Cullen Longfellow’s small nego son,Henry Wadsworth Bryant.
+ Kipling again H. G. Wells,and Anatole France shook hands again and yet again shook again hands again,the former coachman with a pipewrench of the again latter then opening a box of newly without exaggeration shot with some difficulty sardines. Mr. Wiggin took Wrs. Miggin’s harm in is,extinguishing the spittoon by a candle furnished by courtesy of the management on Thursdays,opposite which a church stood perfectly upright but not piano item:a watermelon causes indigestion to William Cullen Longfellow’s small negro son,Henry Wadsworth Bryant.
 
- By this time,however,the flight of crows have ceased.   I withdrew my hands form the tennisracket.   All was over.   One brief convulsive octopus,an then our hero folded his umbrella.
+ By this time,however,the flight of crows have ceased.   I withdrew my hands form the tennisracket.   All was over.   One brief convulsive octopus,and then our hero folded his umbrella.
 
  It seemed too beautiful.
 
- Let us perhaps excuse me if i repeat himself;these,or nearly these,were the not unpainful thoughts which occupied the subject of our attention;to speak even less objectively,i was horribly scared i would actually fall off the rail before the really train after all arrived.   If i should have made this perfectly clear,it entirely would have been not my fault.
+ Let us perhaps excuse me if i repeat himself:these,or nearly these,were the not unpainful thoughts which occupied the subject of our attention;to speak even less objectively,i was horribly scared i would actually fall off the rail before the really train after all arrived.   If i should have made this perfectly clear,it entirely would have been not my fault.
