--- a/_data/poems/is-5/one-ix.yaml
+++ b/_data/poems/is-5/one-ix.yaml
@@ -1,3 +1,28 @@
 title: ONE IX
 
 first_line: even if all desires things moments be
+
+text: |-1
+ even if all desires things moments be
+ murderedknownphotographed,ourselvesyawningwillaskourselves
+ ou sont les neiges....some
+
+ guys talks big
+
+ about Lundon Burlin an gay Paree an
+ some guys claims der never was
+ nutn like Nooer Leans Shikahgo Sain
+ Looey Noo York an San Fran dictaphones
+ wireless subways vacuum
+ cleaners pianolas funnygraphs skyscrapers an safetyrazors
+
+ sall right in its way kiddo
+ but as fer i gimme de good ole daze....
+
+ in dem daze kid Christmas
+ meant sumpn youse knows wot
+ i refers ter Satter Nailyuh(comes but once er
+ year)i'll tell de woild one swell bangup
+ time wen nobody wore no cloze
+ an Went runnin aroun wid eachudder Hell
+ Bent fer election makin believe dey was chust born
