--- a/_data/poems/is-5/one-vi.yaml
+++ b/_data/poems/is-5/one-vi.yaml
@@ -2,6 +2,35 @@ title: ONE VI
 
 first_line: |-1
  Jimmie’s got a goil
-                  goil
-                      goil,
-                          Jimmie
+                    goil
+                        goil,
+                             Jimmie
+
+text: |-1
+ Jimmie’s got a goil
+                    goil
+                        goil,
+                             Jimmie
+ ’s got a goil and
+ she coitnly can shimmie
+ 
+ when you see her shake
+                        shake
+                             shake,
+                                   when
+ you see her shake a
+ shimmie how you wish that you was Jimmie.
+  
+ Oh for such a gurl
+                   gurl
+                       gurl,
+                            oh
+ for such a gurl to
+ be a fellow’s twistandtwirl
+  
+ talk about your Sal–
+                     Sal–
+                         Sal–,
+                              talk
+ about your Salo
+ –mes but gimmie Jimmie’s gal.
