--- a/_data/poems/is-5/one-vi.yaml
+++ b/_data/poems/is-5/one-vi.yaml
@@ -1,36 +1,38 @@
 title: ONE VI
 
+nowrap: true
+
 first_line: |-1
  Jimmie’s got a goil
                     goil
-                        goil,
-                             Jimmie
+                         goil,
+                              Jimmie
 
 text: |-1
  Jimmie’s got a goil
-                    goil
-                        goil,
-                             Jimmie
+                     goil
+                          goil,
+                               Jimmie
  ’s got a goil and
  she coitnly can shimmie
  
  when you see her shake
                         shake
-                             shake,
-                                   when
+                              shake,
+                                    when
  you see her shake a
  shimmie how you wish that you was Jimmie.
   
  Oh for such a gurl
-                   gurl
-                       gurl,
-                            oh
+                    gurl
+                         gurl,
+                              oh
  for such a gurl to
  be a fellow’s twistandtwirl
   
  talk about your Sal–
-                     Sal–
-                         Sal–,
-                              talk
+                      Sal–
+                           Sal–,
+                                talk
  about your Salo
  –mes but gimmie Jimmie’s gal.
