--- a/_data/poems/is-5/one-ix.yaml
+++ b/_data/poems/is-5/one-ix.yaml
@@ -2,9 +2,11 @@ title: ONE IX
 
 first_line: even if all desires things moments be
 
+nowrap: true
+
 text: |-1
  even if all desires things moments be
- murderedknownphotographed,ourselvesyawningwillaskourselves
+ murdered known photographed,ourselves yawning will ask ourselves
  ou sont les neiges....some
  
  guys talks big
