Fix type for #317

--- a/_data/poems/is-5/two-ix.yaml
+++ b/_data/poems/is-5/two-ix.yaml
@@ -48,7 +48,7 @@ text: |-1
  guerre j’m’appelle
  Manon,cinq rue Henri Monnier
  voulez-vous coucher avec moi?
- te terai Mimi
+ te ferai Mimi
  te ferai Minette,
  dead exactly dance
  si vous voulez
