--- a/_data/poems/and/portraits-xii.yaml
+++ b/_data/poems/and/portraits-xii.yaml
@@ -48,7 +48,7 @@ text: |-1
  guerre j’m’appelle
  Manon,cinq rue Henri Monnier
  voulez-vous coucher avec moi?
- te terai Mimi
+ te ferai Mimi
  te ferai Minette,
  dead exactly dance
  si vous voulez
