--- a/_data/poems/is-5/five-americans-iii.yaml
+++ b/_data/poems/is-5/five-americans-iii.yaml
@@ -20,7 +20,7 @@ text: |-1
  jerk at garters)there’s no sharpest neat
  word for the thing.
                      Her voice?
-                               greusome:a trull
+                               gruesome:a trull
  leaps from the lungs “gimme uh swell fite
 
  like up ter yknow,Rektuz,Toysday nite;
