--- a/_data/books.yaml
+++ b/_data/books.yaml
@@ -20,7 +20,7 @@ list:
     - This 1925 self-published release featured work excluded from the first edition of <a href='/book/tulips-and-chimneys/'>Tulips and Chimneys</a>, as well as some newer poems. It entered the public domain in 2021.
    year: 1925
    public_domain: true
-   source: The materials here come from Liveright’s “<a href='https://wwnorton.com/books/9781631490415'>Complete Poems</a>.” The table of content was drawn from Harcourt’s "<a href='https://archive.org/details/poems192319540913cumm/page/n5/mode/2up'>Poems</a>.” If you have access to a high-quality scan of the first edition, please contact <a href='mailto:b@palewi.re'>b@palewi.re</a>.
+   source: The materials here come from a first edition from the Ohio State University library scanned by <a href="https://babel.hathitrust.org/cgi/pt?id=osu.32435005558630&seq=11">Hathi Trust</a>.
 
  - title: XLI Poems
    slug: xli-poems
